--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
+			<span class="solicite-title">Escolha das opções abaixo</span>
 				<div class="solicite-flex">
 					<a href="" class="solicite-res"><i class="fa fa-home"></i>proposta residêncial</a>
 					<a href="" class="solicite-emp"><i class="fa fa-university"></i>proposta empresarial</a>
