--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 tema parallaxie" data-parallaxie='{"size": "cover", "pos_x":"100%", "speed":-0.5, "offset":0}'>
-				<h1>Econômia e Sustentabilidade</h1>
-				<h2>Temos uma solução para seu negócio!<br> seja empresarial, Residêncial ou Rural</h2>
+				<!--<h1>Econômia e Sustentabilidade</h1>
+				<h2>Temos uma solução para seu negócio!<br> seja empresarial, Residêncial ou Rural</h2>-->
 			</div>
 		</div>
 	</div>
