--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 				<div class="solicite-flex">
 					<a href="" class="solicite-res"><i class="fa fa-home"></i>proposta residêncial</a>
 					<a href="" class="solicite-emp"><i class="fa fa-university"></i>proposta empresarial</a>
+					<a href="" class="solicite-rur"><i class="fa fa-envira"></i>proposta rural</a>
 				</div>
 			</div>
 		</div>
