--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 			<div class="col-md-9 nav">				
 				<li><a href="index.html">Inicio</a></li>
-				<li><a href="#">Sobre</a></li>
+				<li><a href="sobre.html">Sobre</a></li>
 				<li><a href="#">Cases</a></li>
 				<li><a href="#">Social</a></li>
 				<li><a href="#">Blog</a></li>
@@ -235,10 +235,24 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 
 <div class="economia parallaxie">
 	<div class="container">
-		<div class="row">		
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Depoimentos recentes</h2>
+			</div>
+		</div>
+		<div class="row">			
 			<div class="col-md-12 parallaxie" data-parallaxie='{"size": "cover", "pos_x":"100%", "speed":-0.5, "offset":0}'>
 				<div class="economia-box" data-slick='{"slidesToShow": 1, "slidesToScroll": 1}'>
+
+					<div class="item">
+					<p><strong>"</strong>Todos os dias temos observado como foi interessante fazer a implementação de uma energia sustentável em nossa casa, a econômia é enorme.<strong>"</strong> Nome da Pessoa</p>
+					</div>	
+
+					<div class="item">
+					<p><strong>"</strong>A Redução nos gastos com energia elétrica na empresa foi extraordinário, conseguimos reduzir em cerca de 85%, e agora podemos invertir mais em nosso negócio!<strong>"</strong> Nome da Pessoa</p>
+					</div>									
 					
+					<!--
 					<div class="item">
 					<p><strong>"</strong>Nosso negócio é desenvolver as melhores soluções para a geração distribuída de energia renovável, levando economia com sustentabilidade para sua empresa ou residência todos os dias.<strong>"</strong></p>
 					</div>	
@@ -249,7 +263,7 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 
 					<div class="item">
 					<p><strong>"</strong>Quem mais se beneficia da utilização de um sistema solar fotovoltaico é Você!.<strong>"</strong></p>
-					</div>					
+					</div>	-->				
 
 				</div>
 				
@@ -266,15 +280,22 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 			<div class="cases-linha"></div>			
 		</div>
 		<div class="row">
-			<div class="col-md-12 case-image">
+			<div class="col-md-4 case-image">
 				<a href="">
 					<img class="img-responsive" src="assets/images/background/case1.jpg" alt="">
+					<span class="case-cont">Instalação dos paineis solares em residências</span>	
 				</a>
+			</div>
+			<div class="col-md-4 case-image">
 				<a href="">
 					<img class="img-responsive" src="assets/images/background/case2.jpg" alt="">
+					<span class="case-cont">Instalação dos paineis solares em empresas</span>	
 				</a>
+			</div>
+			<div class="col-md-4 case-image">
 				<a href="">
 					<img class="img-responsive" src="assets/images/background/case3.jpg" alt="">
+					<span class="case-cont">Instalação dos paineis solares na zona rural</span>	
 				</a>
 			</div>
 			<!--<div class="col-md-4">
