--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 			<div class="col-md-9 nav">				
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="sobre.html">Sobre</a></li>
-				<li><a href="#">Cases</a></li>
-				<li><a href="#">Social</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Contato</a></li>				
+				<li><a href="cases.html">Cases</a></li>
+				<li><a href="social.html">Social</a></li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="contato.html">Contato</a></li>				
 			</div>
 
 		</div>
@@ -281,19 +281,19 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 		</div>
 		<div class="row">
 			<div class="col-md-4 case-image">
-				<a href="">
+				<a href="cases1.html">
 					<img class="img-responsive" src="assets/images/background/case1.jpg" alt="">
 					<span class="case-cont">Instalação dos paineis solares em residências</span>	
 				</a>
 			</div>
 			<div class="col-md-4 case-image">
-				<a href="">
+				<a href="cases2.html">
 					<img class="img-responsive" src="assets/images/background/case2.jpg" alt="">
 					<span class="case-cont">Instalação dos paineis solares em empresas</span>	
 				</a>
 			</div>
 			<div class="col-md-4 case-image">
-				<a href="">
+				<a href="cases3.html">
 					<img class="img-responsive" src="assets/images/background/case3.jpg" alt="">
 					<span class="case-cont">Instalação dos paineis solares na zona rural</span>	
 				</a>
