--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
 			
             <div class="sidebar">
                 <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                    <li><a href="#">Link 4</a></li>
-                    <li><a href="#">Link 5</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="cases.html">Cases</a></li>
+                    <li><a href="social.html">Social</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
                 
                 <div class="sidebar-btn">
