--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,7 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="engenharia.html">Engenharia</a></li>
                     <li><a href="cases.html">Cases</a></li>
                     <li><a href="social.html">Social</a></li>
                     <li><a href="blog.html">Blog</a></li>
