--- a/contato.html
+++ b/contato.html
@@ -118,6 +118,11 @@
                 </form>
             
             </div>
+
+                <div class="end">
+                    Alameda Oton Fleury 123, Jardim Karaíba, Uberlândia MG, 38411-212 <br>
+                    <strong>contato@blueenergyengenharia.com | (34) 2589-5843</strong>
+                </div>    
             
             </div>
         </div>
