--- a/index.html
+++ b/index.html
@@ -407,7 +407,10 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 		<div class="row">
 			<div class="col-md-12 footer-flex">
 				<a href="" class="footer-link">Sobre a BlueEnergy</a>
-				<span class="footer-copy">&copy 2016 Todos direitos reservados</span>
+				<span class="footer-copy">
+					&copy 2016 Todos direitos reservados<br>
+					<strong>contato@blueenergyengenharia.com | (34) 2589-5843</strong>
+				</span>
 				<img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
 			</div>						
 		</div>
