--- a/cases.html
+++ b/cases.html
@@ -36,23 +36,30 @@
 
 <header class="header-sobre parallaxie">
 	<div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <span class="navmail"><i class="nav-ss">contato@blueenergyengenharia.com |</i> (34) 2589-5843</span>
+            </div>
+        </div>	
 		<div class="row">
 
 			<div class="col-md-3 logo">
 				<a href="index.html">
-					<img src="assets/images/logo.png" class="img-responsive parallaxie" data-parallaxie='{"size": "auto", "pos_x":"70%", "speed":0.4, "offset":0}' alt="Blue Energy Engenharia" title="Blue Energy Engenharia">
+					<img src="assets/images/logo-antiga.png" class="img-responsive parallaxie" data-parallaxie='{"size": "auto", "pos_x":"70%", "speed":0.4, "offset":0}' alt="Blue Energy Engenharia" title="Blue Energy Engenharia">
 				</a>
 			</div>
+			
 
 			<div class="col-md-9 nav">
-                <span class="navmail">contato@blueenergyengenharia.com | (34) 2589-5843</span>				    			
-				<!--<li><a href="index.html">Inicio</a></li>
-				<li><a href="sobre.html">Sobre</a></li>
-				<li><a href="cases.html">Cases</a></li>
-				<li><a href="social.html">Social</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contato.html">Contato</a></li>-->				
-			</div>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="engenharia.html">Engenharia</a></li>
+                    <li><a href="cases.html">Cases</a></li>
+                    <li><a href="social.html">Social</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contato.html">Contato</a></li>			
+			</div>						
+
 			
             <div class="sidebar">               
                 <ul>
@@ -74,6 +81,7 @@
 		</div>		
 	</div>
 </header>
+
 
 
 
@@ -150,7 +158,10 @@
 		<div class="row">
 			<div class="col-md-12 footer-flex">
 				<a href="" class="footer-link">Sobre a BlueEnergy</a>
-				<span class="footer-copy">&copy 2016 Todos direitos reservados</span>
+				<span class="footer-copy">
+					&copy 2016 Todos direitos reservados<br>
+					<strong>contato@blueenergyengenharia.com | (34) 2589-5843</strong>
+				</span>
 				<img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
 			</div>						
 		</div>
