--- a/single-blog1.html
+++ b/single-blog1.html
@@ -143,17 +143,19 @@
 
 
 <footer class="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 footer-flex">
-				<a href="" class="footer-link">Sobre a BlueEnergy</a>
-				<span class="footer-copy">&copy 2016 Todos direitos reservados</span>
-				<img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
-			</div>						
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 footer-flex">
+                <a href="" class="footer-link">Sobre a BlueEnergy</a>
+                <span class="footer-copy">
+                    &copy 2016 Todos direitos reservados<br>
+                    <strong>contato@blueenergyengenharia.com | (34) 2589-5843</strong>
+                </span>
+                <img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
+            </div>                      
+        </div>
+    </div>
 </footer>
-
 
 
 
