--- a/blog.html
+++ b/blog.html
@@ -36,38 +36,30 @@
 
 <header class="header-sobre parallaxie">
 	<div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <span class="navmail"><i class="nav-ss">contato@blueenergyengenharia.com |</i> (34) 2589-5843</span>
+            </div>
+        </div>	
 		<div class="row">
 
 			<div class="col-md-3 logo">
 				<a href="index.html">
-					<img src="assets/images/logo.png" class="img-responsive parallaxie" data-parallaxie='{"size": "auto", "pos_x":"70%", "speed":0.4, "offset":0}' alt="Blue Energy Engenharia" title="Blue Energy Engenharia">
+					<img src="assets/images/logo-antiga.png" class="img-responsive parallaxie" data-parallaxie='{"size": "auto", "pos_x":"70%", "speed":0.4, "offset":0}' alt="Blue Energy Engenharia" title="Blue Energy Engenharia">
 				</a>
 			</div>
-
-			<!--<div class="menu">
-				<a href="#">
-					<i class="fa fa-navicon"></i>
-				</a>
-			</div>
-
-			<div class="col-md-9 nav">				
-				<li><a href="index.html">Inicio</a></li>
-				<li><a href="sobre.html">Sobre</a></li>
-				<li><a href="cases.html">Cases</a></li>
-				<li><a href="social.html">Social</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contato.html">Contato</a></li>					
-			</div>-->
 			
+
 			<div class="col-md-9 nav">
-                <span class="navmail">contato@blueenergyengenharia.com | (34) 2589-5843</span>				    			
-				<!--<li><a href="index.html">Inicio</a></li>
-				<li><a href="sobre.html">Sobre</a></li>
-				<li><a href="cases.html">Cases</a></li>
-				<li><a href="social.html">Social</a></li>
-				<li><a href="blog.html">Blog</a></li>
-				<li><a href="contato.html">Contato</a></li>-->				
-			</div>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="engenharia.html">Engenharia</a></li>
+                    <li><a href="cases.html">Cases</a></li>
+                    <li><a href="social.html">Social</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contato.html">Contato</a></li>			
+			</div>						
+
 			
             <div class="sidebar">               
                 <ul>
@@ -84,11 +76,12 @@
                     <div class="sid2">MENU</div>
                     <span></span>
                 </div>
-            </div>			
+            </div>
 
 		</div>		
 	</div>
 </header>
+
 
 
 
@@ -170,15 +163,18 @@
 
 
 <footer class="footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12 footer-flex">
-				<a href="" class="footer-link">Sobre a BlueEnergy</a>
-				<span class="footer-copy">&copy 2016 Todos direitos reservados</span>
-				<img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
-			</div>						
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 footer-flex">
+                <a href="" class="footer-link">Sobre a BlueEnergy</a>
+                <span class="footer-copy">
+                    &copy 2016 Todos direitos reservados<br>
+                    <strong>contato@blueenergyengenharia.com | (34) 2589-5843</strong>
+                </span>
+                <img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
+            </div>                      
+        </div>
+    </div>
 </footer>
 
 
