--- a/engenharia.html
+++ b/engenharia.html
@@ -93,10 +93,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                A missão da Blue Energy é fornecer serviços de engenharia, sustentabilidade, energias renováveis, gerenciamento e fornecimento de pacotes, pautados no compromisso com a excelência e qualidade, monitoramos e damos a solução para sua demanda.
+                
+                ENGENHARIA CIVIL<br>
+                A Blue Energy é capacitada, habilitada e qualificada para solucionar qualquer demanda de engenharia civil, sendo ela industrial, residencial ou rural. Nós temos o que é preciso para elaborar projetos estruturais, arquitetônicos, hidros sanitários, também executamos regularização de imóveis, vistoria de imóveis com emissão de laudos técnicos, executamos reformas, gerenciamos e acompanhamos sua obra do início ao fim, sempre respeitando as normas técnicas regulamentadas. Para maiores informações entre em contato pelo e-mail ou telefone.<br><br>
+
+                ENGENHARIA ELÉTRICA<br>
+                Prontos para solucionar qualquer demanda de Engenharia Elétrica, sendo ela Industrial, Residencial ou Rural. Nós temos o que é preciso para manter a conformidade de seu sistema elétrico, prestamos serviços desde o projeto até a manutenção de seus equipamentos e rede elétrica. Para maiores informações entre em contato pelo email ou telefone.
                 
                 <br><br>
-                ...
+
             </div>
         </div>
     </div>
@@ -128,9 +133,9 @@
             <div class="col-md-12">
             <span class="solicite-title">Escolha uma das opções abaixo</span>
                 <div class="solicite-flex">
-                    <a href="" data-toggle="modal" data-target="#modal-residencial" class="solicite-res"><i class="fa fa-home"></i>proposta residêncial</a>
-                    <a href="" data-toggle="modal" data-target="#modal-empresarial" class="solicite-emp"><i class="fa fa-university"></i>proposta empresarial</a>
-                    <a href="" data-toggle="modal" data-target="#modal-rural" class="solicite-rur"><i class="fa fa-envira"></i>proposta rural</a>
+                    <a href="" data-toggle="modal" data-target="#modal-residencial" class="solicite-res"><i class="fa fa-home"></i>Orçamento Residêncial</a>
+                    <a href="" data-toggle="modal" data-target="#modal-empresarial" class="solicite-emp"><i class="fa fa-university"></i>Orçamento Empresarial</a>
+                    <a href="" data-toggle="modal" data-target="#modal-rural" class="solicite-rur"><i class="fa fa-envira"></i>Orçamento Rural</a>
                 </div>
 
 
@@ -142,7 +147,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Proposta Residêncial</h5>                        
+                        <h5 class="modal-title" id="exampleModalLabel">Orçamento Residêncial</h5>                        
                       </div>
                       <div class="modal-body">
                         <form>
@@ -169,7 +174,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">                               
-                        <a href="" class="btn btn01">Solicitar Proposta</a>
+                        <a href="" class="btn btn01">Solicitar</a>
                       </div>
                     </div>
                   </div>
@@ -181,7 +186,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title modal-title2" id="exampleModalLabel">Proposta Empresarial</h5>                       
+                        <h5 class="modal-title modal-title2" id="exampleModalLabel">Orçamento Empresarial</h5>                       
                       </div>
                       <div class="modal-body">
                         <form>
@@ -208,7 +213,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">                               
-                        <a href="" class="btn btn02">Solicitar Proposta</a>
+                        <a href="" class="btn btn02">Solicitar</a>
                       </div>
                     </div>
                   </div>
@@ -218,7 +223,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title modal-title3" id="exampleModalLabel">Proposta Rural</h5>                     
+                        <h5 class="modal-title modal-title3" id="exampleModalLabel">Orçamento Rural</h5>                     
                       </div>
                       <div class="modal-body">
                         <form>
@@ -245,7 +250,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">                               
-                        <a href="" class="btn btn03">Solicitar Proposta</a>
+                        <a href="" class="btn btn03">Solicitar</a>
                       </div>
                     </div>
                   </div>
