--- a/blog.html
+++ b/blog.html
@@ -153,9 +153,9 @@
             <div class="col-md-12">
             <span class="solicite-title">Escolha uma das opções abaixo</span>
                 <div class="solicite-flex">
-                    <a href="" data-toggle="modal" data-target="#modal-residencial" class="solicite-res"><i class="fa fa-home"></i>proposta residêncial</a>
-                    <a href="" data-toggle="modal" data-target="#modal-empresarial" class="solicite-emp"><i class="fa fa-university"></i>proposta empresarial</a>
-                    <a href="" data-toggle="modal" data-target="#modal-rural" class="solicite-rur"><i class="fa fa-envira"></i>proposta rural</a>
+                    <a href="" data-toggle="modal" data-target="#modal-residencial" class="solicite-res"><i class="fa fa-home"></i>Orçamento Residêncial</a>
+                    <a href="" data-toggle="modal" data-target="#modal-empresarial" class="solicite-emp"><i class="fa fa-university"></i>Orçamento Empresarial</a>
+                    <a href="" data-toggle="modal" data-target="#modal-rural" class="solicite-rur"><i class="fa fa-envira"></i>Orçamento Rural</a>
                 </div>
 
 
@@ -167,7 +167,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Proposta Residêncial</h5>                        
+                        <h5 class="modal-title" id="exampleModalLabel">Orçamento Residêncial</h5>                        
                       </div>
                       <div class="modal-body">
                         <form>
@@ -194,7 +194,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">                               
-                        <a href="" class="btn btn01">Solicitar Proposta</a>
+                        <a href="" class="btn btn01">Solicitar</a>
                       </div>
                     </div>
                   </div>
@@ -206,7 +206,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title modal-title2" id="exampleModalLabel">Proposta Empresarial</h5>                       
+                        <h5 class="modal-title modal-title2" id="exampleModalLabel">Orçamento Empresarial</h5>                       
                       </div>
                       <div class="modal-body">
                         <form>
@@ -233,7 +233,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">                               
-                        <a href="" class="btn btn02">Solicitar Proposta</a>
+                        <a href="" class="btn btn02">Solicitar</a>
                       </div>
                     </div>
                   </div>
@@ -243,7 +243,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title modal-title3" id="exampleModalLabel">Proposta Rural</h5>                     
+                        <h5 class="modal-title modal-title3" id="exampleModalLabel">Orçamento Rural</h5>                     
                       </div>
                       <div class="modal-body">
                         <form>
@@ -270,7 +270,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">                               
-                        <a href="" class="btn btn03">Solicitar Proposta</a>
+                        <a href="" class="btn btn03">Solicitar</a>
                       </div>
                     </div>
                   </div>
