--- a/sobre.html
+++ b/sobre.html
@@ -127,9 +127,9 @@
             <div class="col-md-12">
             <span class="solicite-title">Escolha uma das opções abaixo</span>
                 <div class="solicite-flex">
-                    <a href="" data-toggle="modal" data-target="#modal-residencial" class="solicite-res"><i class="fa fa-home"></i>proposta residêncial</a>
-                    <a href="" data-toggle="modal" data-target="#modal-empresarial" class="solicite-emp"><i class="fa fa-university"></i>proposta empresarial</a>
-                    <a href="" data-toggle="modal" data-target="#modal-rural" class="solicite-rur"><i class="fa fa-envira"></i>proposta rural</a>
+                    <a href="" data-toggle="modal" data-target="#modal-residencial" class="solicite-res"><i class="fa fa-home"></i>Orçamento Residêncial</a>
+                    <a href="" data-toggle="modal" data-target="#modal-empresarial" class="solicite-emp"><i class="fa fa-university"></i>Orçamento Empresarial</a>
+                    <a href="" data-toggle="modal" data-target="#modal-rural" class="solicite-rur"><i class="fa fa-envira"></i>Orçamento Rural</a>
                 </div>
 
 
@@ -141,7 +141,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Proposta Residêncial</h5>                        
+                        <h5 class="modal-title" id="exampleModalLabel">Orçamento Residêncial</h5>                        
                       </div>
                       <div class="modal-body">
                         <form>
@@ -168,7 +168,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">                               
-                        <a href="" class="btn btn01">Solicitar Proposta</a>
+                        <a href="" class="btn btn01">Solicitar</a>
                       </div>
                     </div>
                   </div>
@@ -180,7 +180,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title modal-title2" id="exampleModalLabel">Proposta Empresarial</h5>                       
+                        <h5 class="modal-title modal-title2" id="exampleModalLabel">Orçamento Empresarial</h5>                       
                       </div>
                       <div class="modal-body">
                         <form>
@@ -207,7 +207,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">                               
-                        <a href="" class="btn btn02">Solicitar Proposta</a>
+                        <a href="" class="btn btn02">Solicitar</a>
                       </div>
                     </div>
                   </div>
@@ -217,7 +217,7 @@
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title modal-title3" id="exampleModalLabel">Proposta Rural</h5>                     
+                        <h5 class="modal-title modal-title3" id="exampleModalLabel">Orçamento Rural</h5>                     
                       </div>
                       <div class="modal-body">
                         <form>
@@ -244,7 +244,7 @@
                         </form>
                       </div>
                       <div class="modal-footer">                               
-                        <a href="" class="btn btn03">Solicitar Proposta</a>
+                        <a href="" class="btn btn03">Solicitar</a>
                       </div>
                     </div>
                   </div>
