--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="engenharia.html">Engenharia</a></li>
                     <li><a href="cases.html">Cases</a></li>
-                    <li><a href="social.html">Social</a></li>
                     <li><a href="blog.html">Blog</a></li>
+                    <li><a href="videos.html">Vídeos</a></li>
+                    <li><a href="filiais.html">Filiais</a></li>
                     <li><a href="contato.html">Contato</a></li>			
 			</div>
 			
@@ -82,8 +83,9 @@
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="engenharia.html">Engenharia</a></li>
                     <li><a href="cases.html">Cases</a></li>
-                    <li><a href="social.html">Social</a></li>
                     <li><a href="blog.html">Blog</a></li>
+                    <li><a href="videos.html">Vídeos</a></li>
+                    <li><a href="filiais.html">Filiais</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
                 
@@ -97,7 +99,7 @@
 
 		</div>
 
-		<div class="row">
+		<!--<div class="row">
 			<div class="col-md-12">
 				<div class="selo">
 					<a href="https://www.portalsolar.com.br/fornecedores/empresas-de-energia-solar/minas-gerais/uberlandia/blue-energy---engenharia-e-sustentabilidade" target="_blank">
@@ -105,7 +107,7 @@
 					</a>
 				</div>
 			</div>
-		</div>
+		</div>-->
 
 
 
@@ -331,19 +333,19 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 			<div class="col-md-4 case-image">
 				<a href="cases1.html">
 					<img class="img-responsive" src="assets/images/background/case1.jpg" alt="">
-					<span class="case-cont">Instalação dos paineis solares em residências</span>	
+					<span class="case-cont">Instalações de paineis solares</span>	
 				</a>
 			</div>
 			<div class="col-md-4 case-image">
 				<a href="cases2.html">
 					<img class="img-responsive" src="assets/images/background/case2.jpg" alt="">
-					<span class="case-cont">Instalação dos paineis solares em empresas</span>	
+					<span class="case-cont">Serviços de Engenharia</span>	
 				</a>
 			</div>
 			<div class="col-md-4 case-image">
 				<a href="cases3.html">
 					<img class="img-responsive" src="assets/images/background/case3.jpg" alt="">
-					<span class="case-cont">Instalação dos paineis solares na zona rural</span>	
+					<span class="case-cont">Projetos de Engenharia</span>	
 				</a>
 			</div>
 			<!--<div class="col-md-4">
@@ -382,7 +384,7 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>parceiros e clientes da BlueEnergy</h1>
+				<h1>parceiros e clientes da Blue Energy</h1>
 				<!--
 				<div class="parceiros-flex">
 					<img class="img-responsive" src="assets/images/background/par01.jpg" alt="">
@@ -474,6 +476,10 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
                             <input type="email" class="form-control" required>
                           </div>
                           <div class="form-group">
+                            <label class="form-control-label modal-label-align">Média de consumo (kwh):</label>
+                            <input type="text" class="form-control" required>
+                          </div>                          
+                          <div class="form-group">
                             <label class="form-control-label modal-label-align">Endereço:</label>
                             <input type="text" class="form-control" required>
                           </div>                                                                          
@@ -513,6 +519,10 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
                             <input type="email" class="form-control" required>
                           </div>
                           <div class="form-group">
+                            <label class="form-control-label modal-label-align">Média de consumo (kwh):</label>
+                            <input type="text" class="form-control" required>
+                          </div>                          
+                          <div class="form-group">
                             <label class="form-control-label modal-label-align">Endereço:</label>
                             <input type="text" class="form-control" required>
                           </div>                                                                          
@@ -550,6 +560,10 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
                             <input type="email" class="form-control" required>
                           </div>
                           <div class="form-group">
+                            <label class="form-control-label modal-label-align">Média de consumo (kwh):</label>
+                            <input type="text" class="form-control" required>
+                          </div>                          
+                          <div class="form-group">
                             <label class="form-control-label modal-label-align">Endereço:</label>
                             <input type="text" class="form-control" required>
                           </div>                                                                          
@@ -586,9 +600,14 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 					<strong>contato@blueenergyengenharia.com | (34) 2589-5843</strong>
 				</span>
 				<img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
+				<div class="selo">
+					<a href="https://www.portalsolar.com.br/fornecedores/empresas-de-energia-solar/minas-gerais/uberlandia/blue-energy---engenharia-e-sustentabilidade" target="_blank">
+						<img src="assets/images/selo.png" alt="">
+					</a>
+				</div>				
 			</div>						
 		</div>
-	</div>
+	</div>	
 </footer>
 
 
@@ -640,7 +659,7 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
     loop:true,
     margin:10,
     autoplay:true,
-    autoplayTimeout:5000,
+    autoplayTimeout:15000,
     autoplayHoverPause:true,
             responsive:{
                 600:{
