--- a/filiais.html
+++ b/filiais.html
@@ -95,27 +95,38 @@
 
 <div class="filiais">
     <div class="container">
-      <div class="row">
-        <!--<spam class="filiais-titu">Onde Estamos</spam>-->
-      </div>
         <div class="row">
-            <div class="col-md-4">
-                <h1>Uberlândia - MG</h1> 
-                <p>
-                  Alameda Oton Fleuri 123, Jd. Karaíba<br>
-                  38411-212<br>
-                  contato@blueenergyengenharia.com<br>
-                  (34) 99823-1006 / 99981-2695 / 2589-5843               
-                </p>                           
-            </div>
-            <div class="col-md-4">
-                <h1>Paracatu - MG</h1>
-                <p>(38) 99823-1006 / 99981-2695</p>                 
-            </div>
-            <div class="col-md-4">
-                <h1>Unai - MG</h1> 
-                <p>(38) 99823-1006 / 99981-2695</p>                
-            </div>                        
+          <div class="filiais-flex">
+              <div class="filiais-flex-box">
+                  <h1>Uberlândia - MG</h1> 
+                  <p>
+                    Alameda Oton Fleuri 123, Jd. Karaíba<br>
+                    38411-212<br>
+                    contato@blueenergyengenharia.com<br>
+                    (34) 99823-1006 / 99981-2695 / 2589-5843               
+                  </p>                           
+              </div>
+              <div class="filiais-flex-box">
+                  <h1>Paracatu - MG</h1>
+                  <p>(38) 99823-1006 / 99981-2695</p>                 
+              </div>
+              <div class="filiais-flex-box">
+                  <h1>Unai - MG</h1> 
+                  <p>(38) 99823-1006 / 99981-2695</p>                
+              </div>   
+              <div class="filiais-flex-box">
+                  <h1>Brasilândia de Minas - MG</h1> 
+                  <p>(38) 98816-8880 / 99899-8432</p>                
+              </div> 
+              <div class="filiais-flex-box">
+                  <h1>João Pinheiro - MG</h1> 
+                  <p>(38) 98816-8880 / 99899-8432</p>                
+              </div> 
+              <div class="filiais-flex-box">
+                  <h1>Itumbiara - GO</h1> 
+                  <p>(64) 98124-8885</p>                
+              </div>                             
+          </div>                                
         </div>
     </div>
 </div>
