--- a/index.html
+++ b/index.html
@@ -94,22 +94,23 @@
                     <span></span>
                 </div>
             </div>
-            
-
 
 		</div>
 
-		<!--<div class="row">
-			<div class="col-md-12">
-				<div class="selo">
-					<a href="https://www.portalsolar.com.br/fornecedores/empresas-de-energia-solar/minas-gerais/uberlandia/blue-energy---engenharia-e-sustentabilidade" target="_blank">
-						<img src="assets/images/selo.png" alt="">
-					</a>
-				</div>
+
+
+
+		<div class="linha-tag">
+			<div class="row">
+				<div class="col-md-2"></div>
+					<div class="col-md-8">				
+						<span class="tag-center">
+							Reduzimos sua conta de energia em até 95%!
+						</span>
+					</div>
+				<div class="col-md-2"></div>
 			</div>
-		</div>-->
-
-
+		</div>
 
 
 	</div>
@@ -428,7 +429,10 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
                     </div>	
                     <div class="item">
                     	<img class="img-responsive" src="assets/images/background/par07.png" alt="">
-                    </div>	                                                                                                    
+                    </div>	 
+                    <div class="item">
+                    	<img class="img-responsive" src="assets/images/background/par08.png" alt="">
+                    </div>	                                                                                                                    
                 </div>
 
 
