--- a/filiais.html
+++ b/filiais.html
@@ -103,28 +103,28 @@
                     Alameda Oton Fleuri 123, Jd. Karaíba<br>
                     38411-212<br>
                     contato@blueenergyengenharia.com<br>
-                    (34) 99823-1006 / 99981-2695 / 2589-5843               
+                    <span style="color: #b8370c; font-weight: bold;">(34) 99823-1006 / 99981-2695 / 2589-5843 </span>
                   </p>                           
               </div>
               <div class="filiais-flex-box">
                   <h1>Paracatu - MG</h1>
-                  <p>(38) 99823-1006 / 99981-2695</p>                 
+                  <p><span style="color: #b8370c; font-weight: bold;">(38) 99823-1006 / 99981-2695</span></p>                 
               </div>
               <div class="filiais-flex-box">
                   <h1>Unai - MG</h1> 
-                  <p>(38) 99823-1006 / 99981-2695</p>                
+                  <p><span style="color: #b8370c; font-weight: bold;">(38) 99823-1006 / 99981-2695</span></p>                
               </div>   
               <div class="filiais-flex-box">
                   <h1>Brasilândia de Minas - MG</h1> 
-                  <p>(38) 98816-8880 / 99899-8432</p>                
+                  <p><span style="color: #b8370c; font-weight: bold;">(38) 98816-8880 / 99899-8432</span></p>                
               </div> 
               <div class="filiais-flex-box">
                   <h1>João Pinheiro - MG</h1> 
-                  <p>(38) 98816-8880 / 99899-8432</p>                
+                  <p><span style="color: #b8370c; font-weight: bold;">(38) 98816-8880 / 99899-8432</span></p>                
               </div> 
               <div class="filiais-flex-box">
                   <h1>Itumbiara - GO</h1> 
-                  <p>(64) 98124-8885</p>                
+                  <p><span style="color: #b8370c; font-weight: bold;">(64) 98124-8885</span></p>                
               </div>                             
           </div>                                
         </div>
