--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<div class="col-md-2"></div>
 					<div class="col-md-8">				
 						<span class="tag-center">
-							Reduzimos sua conta de energia em até 95%!
+							Reduzimos sua conta de energia em até 95 %!
 						</span>
 					</div>
 				<div class="col-md-2"></div>
@@ -309,11 +309,13 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
                     
                     <div class="owl-carousel owl-theme">
                         <div class="item">
-                        <p><strong>"</strong>Todos os dias temos observado como foi interessante fazer a implementação de uma energia sustentável em nossa casa, a econômia é enorme.<strong>"</strong> Nome da Pessoa</p>
+                        <p><strong>"</strong>Todos os dias temos observado como foi interessante fazer a implementação de uma energia sustentável em nossa casa, a econômia é enorme.<strong>"</strong><br>
+                         <i style="margin: 10px 0 0 0 !important; display: block; font-weight: bold;">(ITAMAR - SALÃO DE CABELEIREIRO)</i></p>
                         </div>	
 
                         <div class="item">
-                        <p><strong>"</strong>A Redução nos gastos com energia elétrica na empresa foi extraordinário, conseguimos reduzir em cerca de 85%, e agora podemos invertir mais em nosso negócio!<strong>"</strong> Nome da Pessoa</p>
+                        <p><strong>"</strong>A Redução nos gastos com energia elétrica na empresa foi extraordinário, conseguimos reduzir em cerca de 95%, e agora podemos invertir mais em nosso negócio!<strong>"</strong><br>
+                        <i style="margin: 10px 0 0 0 !important; display: block; font-weight: bold;">(MARCONE - JB BEBIDAS)</i></p>
                         </div>	
                     </div>
 									
