--- a/cases3.html
+++ b/cases3.html
@@ -204,7 +204,10 @@
                     </div>  
                     <div class="item">
                       <img class="img-responsive" src="assets/images/background/par07.png" alt="">
-                    </div>                                                                                                      
+                    </div>   
+                    <div class="item">
+                      <img class="img-responsive" src="assets/images/background/par08.png" alt="">
+                    </div>        
                 </div>
 
 
