--- a/cases1.html
+++ b/cases1.html
@@ -246,7 +246,6 @@
 
 
 
-
           <div class="owl-parceiros">
                     <div class="item">
                       <img class="img-responsive" src="assets/images/background/par01.png" alt="">
@@ -268,7 +267,10 @@
                     </div>  
                     <div class="item">
                       <img class="img-responsive" src="assets/images/background/par07.png" alt="">
-                    </div>                                                                                                      
+                    </div>   
+                    <div class="item">
+                      <img class="img-responsive" src="assets/images/background/par08.png" alt="">
+                    </div>        
                 </div>
 
 
