--- a/engenharia.html
+++ b/engenharia.html
@@ -54,9 +54,11 @@
 					<img src="assets/images/logo-antiga.png" class="img-responsive parallaxie" data-parallaxie='{"size": "auto", "pos_x":"70%", "speed":0.4, "offset":0}' alt="Blue Energy Engenharia" title="Blue Energy Engenharia">
 				</a>
 			</div>
+
+      <div class="col-md-2"></div>    
 			
 
-      <div class="col-md-9 nav">
+      <div class="col-md-7 nav">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="engenharia.html">Engenharia</a></li>
@@ -113,85 +115,6 @@
 
 
 
-
-<!--<div class="parceiros">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>parceiros e clientes da BlueEnergy</h1>
-        <div class="parceiros-flex">
-          <img class="img-responsive" src="http://placehold.it/200x100" alt="">
-          <img class="img-responsive" src="http://placehold.it/200x100" alt="">
-          <img class="img-responsive" src="http://placehold.it/200x100" alt="">
-          <img class="img-responsive" src="http://placehold.it/200x100" alt="">
-          <img class="img-responsive" src="http://placehold.it/200x100" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
-</div>-->
-
-<div class="parceiros">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>parceiros e clientes da Blue Energy</h1>
-        <!--
-        <div class="parceiros-flex">
-          <img class="img-responsive" src="assets/images/background/par01.jpg" alt="">
-          <img class="img-responsive" src="assets/images/background/par02.jpg" alt="">
-          <img class="img-responsive" src="assets/images/background/par03.jpg" alt="">
-          <img class="img-responsive" src="assets/images/background/par04.jpg" alt="">
-          <img class="img-responsive" src="assets/images/background/par05.jpg" alt="">
-          <img class="img-responsive" src="assets/images/background/par06.jpg" alt="">
-          <img class="img-responsive" src="assets/images/background/par07.jpg" alt="">
-          <img class="img-responsive" src="http://placehold.it/200x100" alt="">
-          <img class="img-responsive" src="http://placehold.it/200x100" alt="">
-          <img class="img-responsive" src="http://placehold.it/200x100" alt="">
-          <img class="img-responsive" src="http://placehold.it/200x100" alt="">
-
-
-
-
-        </div>-->
-
-
-
-
-          <div class="owl-parceiros">
-                    <div class="item">
-                      <img class="img-responsive" src="assets/images/background/par01.png" alt="">
-                    </div>  
-                    <div class="item">
-                      <img class="img-responsive" src="assets/images/background/par02.png" alt="">
-                    </div>  
-                    <div class="item">
-                      <img class="img-responsive" src="assets/images/background/par03.png" alt="">
-                    </div>  
-                    <div class="item">
-                      <img class="img-responsive" src="assets/images/background/par04.png" alt="">
-                    </div>  
-                    <div class="item">
-                      <img class="img-responsive" src="assets/images/background/par05.png" alt="">
-                    </div>  
-                    <div class="item">
-                      <img class="img-responsive" src="assets/images/background/par06.png" alt="">
-                    </div>  
-                    <div class="item">
-                      <img class="img-responsive" src="assets/images/background/par07.png" alt="">
-                    </div>   
-                    <div class="item">
-                      <img class="img-responsive" src="assets/images/background/par08.png" alt="">
-                    </div>        
-                </div>
-
-
-
-
-      </div>
-    </div>
-  </div>
-</div>
 
 <div class="solicite parallaxie">
     <div class="container">
@@ -345,23 +268,28 @@
 
 
 <footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 footer-flex">
-                <a href="" class="footer-link">Sobre a BlueEnergy</a>
-                <span class="footer-copy">
-                    &copy 2016 Todos direitos reservados<br>
-                    <strong>contato@blueenergyengenharia.com | (34) 2589-5843</strong>
-                </span>
-                <img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
-                        <div class="selo">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 footer-flex">
+        <!--<a href="" class="footer-link">Sobre a BlueEnergy</a>-->
+        <span class="footer-copy" style="margin: 0 60px;">
+          &copy 2016 Todos direitos reservados<br>
+          <strong>contato@blueenergyengenharia.com | (34) 2589-5843</strong>
+        </span>
+        <img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
+        <div class="selo">
           <a href="https://www.portalsolar.com.br/fornecedores/empresas-de-energia-solar/minas-gerais/uberlandia/blue-energy---engenharia-e-sustentabilidade" target="_blank">
-            <img src="assets/images/selo.png" alt="">
+            <img src="assets/images/selo.png" alt="" class="img-responsive">
           </a>
         </div>  
-            </div>                      
-        </div>
+        <div class="zap">
+          <a href="https://api.whatsapp.com/send?phone=5534992372333" target="_blank">
+            <img src="assets/images/zap2.png" class="img-responsive img-fluid">
+          </a>          
+        </div>      
+      </div>            
     </div>
+  </div>  
 </footer>
 
 
