--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <link rel="stylesheet" type="text/css" href="assets/bootstrap/css/bootstrap.min.css">
 
     <!--ESTILO FONTE AWESOME-->
-    <link rel="stylesheet" href="assets/css/font-awesome.css">
+
+
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
     <!--WOW ANIMATE-->
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -49,7 +51,11 @@
 	<div class="container">
         <div class="row">
             <div class="col-md-12">
-                <span class="navmail"><i class="nav-ss">contato@blueenergyengenharia.com |</i> (34) 2589-5843</span>
+                <span class="navmail">
+                	<a href="https://www.facebook.com/blueenergyengenharia/" target="_blank"><i class="fab fa-facebook-f social-header"></i></a>
+                	<a href="https://api.whatsapp.com/send?phone=5534992372333" target="_blank"><i class="fab fa-whatsapp social-header"></i></a>
+                	<a href="https://www.youtube.com/channel/UCCYsAn4EMeRdEkMlh_KLwkw" target="_blank"><i class="fab fa-youtube social-header"></i></a>
+                	<i class="nav-ss">contato@blueenergyengenharia.com |</i> (34) 2589-5843</span>
             </div>
         </div>
 		<div class="row">           
@@ -66,7 +72,9 @@
 				</a>
 			</div>-->
 
-			<div class="col-md-9 nav">
+			<div class="col-md-2"></div>
+
+			<div class="col-md-7 nav">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="engenharia.html">Engenharia</a></li>
@@ -596,21 +604,27 @@ Temos uma equipe experiente e preparada para entregar sua instalalação com tod
 
 
 
+
 <footer class="footer">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 footer-flex">
-				<a href="" class="footer-link">Sobre a BlueEnergy</a>
-				<span class="footer-copy">
+				<!--<a href="" class="footer-link">Sobre a BlueEnergy</a>-->
+				<span class="footer-copy" style="margin: 0 60px;">
 					&copy 2016 Todos direitos reservados<br>
 					<strong>contato@blueenergyengenharia.com | (34) 2589-5843</strong>
 				</span>
 				<img src="assets/images/background/logo-footer.png" class="img-responsive footer-img">
 				<div class="selo">
 					<a href="https://www.portalsolar.com.br/fornecedores/empresas-de-energia-solar/minas-gerais/uberlandia/blue-energy---engenharia-e-sustentabilidade" target="_blank">
-						<img src="assets/images/selo.png" alt="">
+						<img src="assets/images/selo.png" alt="" class="img-responsive">
 					</a>
-				</div>				
+				</div>	
+				<div class="zap">
+					<a href="https://api.whatsapp.com/send?phone=5534992372333" target="_blank">
+						<img src="assets/images/zap2.png" class="img-responsive img-fluid">
+					</a>					
+				</div>			
 			</div>						
 		</div>
 	</div>	
